try another https strapdown.js

--- a/strapdown.html
+++ b/strapdown.html
@@ -6,5 +6,5 @@
 ##MARKDOWN##
 </xmp>
 
-<script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
+<script src="https://lbesson.bitbucket.org/md/strapdown.min.js"></script>
 </html>
