--- a/strapdown.html
+++ b/strapdown.html
@@ -7,4 +7,14 @@
 </xmp>
 
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
+<script type="text/javascript">
+//make external links open in a new tab
+var links = document.links;
+
+for (var i = 0, linksLength = links.length; i < linksLength; i++) {
+   if (links[i].hostname != window.location.hostname) {
+       links[i].target = '_blank';
+   } 
+}
+</script>
 </html>
