--- a/csdc/scoreboardtemplate.htm
+++ b/csdc/scoreboardtemplate.htm
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
 <!-- Latest compiled and minified JavaScript -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <title>CSDC Scoreboard (WIP)</title>
 </head>
@@ -17,18 +18,20 @@
 
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
+    <!--<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
     <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
     <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
-    <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
+    <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>-->
+    ##TABLIST##
   </ul>
 
   <!-- Tab panes -->
   <div class="tab-content">
-    <div role="tabpanel" class="tab-pane active" id="home">1</div>
+    <!--<div role="tabpanel" class="tab-pane active" id="home">1</div>
     <div role="tabpanel" class="tab-pane" id="profile">2</div>
     <div role="tabpanel" class="tab-pane" id="messages">3</div>
-    <div role="tabpanel" class="tab-pane" id="settings">4</div>
+    <div role="tabpanel" class="tab-pane" id="settings">4</div>-->
+    ##TABCONTENT##
   </div>
 
 </div>
