--- a/csdc/scoreboardtemplate.htm
+++ b/csdc/scoreboardtemplate.htm
@@ -10,6 +10,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="//fast.eager.io/agwcuq52SB.js"></script>
 <title>CSDC Scoreboard (WIP)</title>
 </head>
 <body>
